@@ -1,4 +1,5 @@
-* Program binaries are now extracted during tuning and saved in the cache. This can also make tuning faster on systems that don't cache kernels.
+* Program binaries are now extracted during tuning and saved in the cache (see #8). This can also make tuning faster on systems that don't cache kernels.
+* Out-of-place scan is now supported (partially implements #12).
 
 1.2.4
 -----
